--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "preserveConstEnums": true,
       "removeComments": true,
       "sourceMap": true,
+      "lib": ["es6", "dom"],
       "target": "es5"
     },
     "include": [
