--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blueprintjs/core": "^3.3.0",
     "@types/react-redux": "^6.0.6",
     "@types/redux-logger": "^3.0.6",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
